--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "src/index.ts",
+  "main": "src/controllers/index.ts",
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bun run src/controllers/index.ts"
   },
   "dependencies": {
     "drizzle-orm": "^0.44.7",
