--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.7",
-    "hono": "^3.0.0"
+    "hono": "^3.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
